<resources>
    <!-- Game Name -->
    <string name="app_name">Candy Match 3</string>

    <!-- Toolbar Strings -->
    <string name="toolbar_about">About Game</string>
    <string name="toolbar_feedback">FeedBack</string>
    <string name="toolbar_profile">My Profile</string>
    <string name="toolbar_latest_withdrawal">Latest Withdrawal</string>
    <string name="toolbar_myWallet">My Wallet</string>
    <string name="toolbar_login">Login</string>
    <string name="toolbar_signup">Signup</string>
    <string name="toolbar_privacy">Privacy Policy</string>
    <string name="toolbar_achievements">My Achievements</string>

    <!-- Main Activity -->
    <string name="score">Score:</string>
    <string name="move">Move:</string>
    <string name="level">Level:</string>
    <string name="zero">0</string>
    <string name="start_play">Play</string>
    <string name="game_board">Game Board</string>
    <string name="latest_payments">Latest Payments</string>
    <string name="play">Play</string>
    <string name="withdrawal">My Wallet</string>
    <string name="my_achievements">My Achievements</string>
    <string name="your_points">Your Points:</string>
    <string name="press_back_exit">Please click BACK again to exit</string>
    <string name="no_minimum_withdrawal">You do not have a minimum withdrawal amount!</string>
    <string name="withdrawal_request_sent">Withdrawal request has been sent successfully</string>

    <!-- Welcome/Login/SignUp Activity -->
    <string name="welcome_to_candy_match_3">Welcome to \nCandy Match 3</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_back">Welcome \nBack</string>
    <string name="your_name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_account">Create \nAccount</string>
    <string name="dont_have_account">Don\'t have an account? Sign up</string>
    <string name="have_account_login">Have account? Login</string>


    <!-- My Wallet Activity -->
    <string name="wallet_alert">Loading..</string>
    <string name="wallet_mas">Please enter the email address that you would like to use:</string>
    <string name="wallet_req">You need to have at least 10000 points to cash out.</string>
    <string name="wallet_request">Request</string>
    <string name="wallet_convert">Loading..</string>
    <string name="wallet_send">Send Request</string>
    <string name="wallet_wallet">Loading..</string>
    <string name="wallet_method">Method:</string>
    <string name="paypal">Loading..</string>
    <string name="email_address">Email Address</string>
    <string name="your_coinbase_email">Your Email:</string>

    <!-- About -->
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About App</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="our_website">Our Website</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- Feedback -->
    <string name="feedback_title">Title*</string>
    <string name="feedback_message">Your Feedback Message*</string>

    <!-- Rate App Dialog -->
    <string name="Rate_Title">Rate the app 5 stars :)</string>

    <!-- FeedBack Dialog -->
    <string name="Feedback_Send">Send</string>
    <string name="Feedback_Cancel">Cancel</string>
    <string name="Feedback_Title">Tell us what you think</string>
    <string name="Feedback_Text">Please write your opinion about the game in order to improve it to the best :)</string>


    <!-- Pay List Activity -->
    <string name="pay_list_username">Name</string>
    <string name="pay_list_amount">Amount</string>

    <!-- Splash Activity -->
    <string name="splash_try_again">Try Again</string>
    <string name="splash_no_internet">No Internet Connection</string>

    <!-- Game Strings -->
    <string name="game_over">Game Over</string>
    <string name="best_score">Best Score</string>
    <string name="touch">Touch To Start</string>

    <!-- Game Over Activity -->
    <string name="start">Start</string>
    <string name="play_again">Play Again</string>
    <string name="go_home">Go Home</string>

    <!-- Profile -->
    <string name="profile_Points">Your Points</string>
    <string name="profile_myProfile">MY PROFILE</string>
    <string name="profile_others">OTHERS</string>
    <string name="profile_name">Name</string>
    <string name="profile_email">Email</string>
    <string name="profile_contact">Contact Us</string>
    <string name="profile_report">Report a problem</string>
    <string name="profile_about">About Game</string>
    <string name="developer_by">Developer by Ibrahim</string>

    <!-- New App Update String -->
    <string name="new_version">New Version</string>
    <string name="new_update_msg">You must update the app for the new version</string>
    <string name="close">Close</string>
    <string name="update">Update</string>

    <string name="loading">Loading..</string>
    <string name="app_version">Version:</string>
    <string name="version_unknown">unknown</string>
    <string name="copied">Text copied to clipboard</string>

    <!-- Achievement Activity -->
    <string name="achievement_1">The Rocket</string>
    <string name="achievement_1_desc">Complete Level 5</string>
    <string name="achievement_2">Gold Medal</string>
    <string name="achievement_2_desc">Complete Level 25</string>
    <string name="achievement_3">Thunderbolt</string>
    <string name="achievement_3_desc">Complete Level 50</string>

    <!-- Share App Text -->
    <string name="Share_Text">Best Game to Make Money From Your Phone Download it Now: \n</string>

    <string name="game_level">Game Level: -</string>
    <string name="level_require">Level Require: -</string>
    <string name="you_lose">You Lose</string>
    <string name="good_luck_next_time">Good Luck Next Time :)</string>
    <string name="you_won">You Won</string>
    <string name="next_level">Next Level</string>
    <string name="amazing_job_keep_up">Amazing Job, Keep Up :)</string>
    <string name="congrats_you_earned">Congrats, you earned:</string>
    <string name="level_requires">Level Require: \nscore:</string>
    <string name="moves">, Moves:</string>

    <string name="menu_main">Menu Main</string>
    <string name="try_again">Try Again</string>
    <string name="points">Points</string>
    <string name="Ok">OK</string>
    <string name="showAds">Show Ads</string>
    <string name="short_video_ads">To get your points you must see short video ads</string>
    <string name="short_video">Short Video</string>
    <string name="sorry">Sorry !</string>
    <string name="account_blocked">Your account is blocked, please contact us on our email for more details.</string>


    <!-- Strings of Admob Ads -->
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_reward_id">ca-app-pub-3940256099942544/5224354917</string>

    <!-- Applovin MAX Ads -->
    <string name="appLovin_interstitial_id">123456</string>
    <string name="appLovin_rewards_id">123456</string>

</resources>